--- a/subscribe.css
+++ b/subscribe.css
@@ -11,7 +11,7 @@
 #subscribeinput {
 	 font-size: inherit;
      width: 300px;
-     max-width: 80%;
+     max-width: 70%;
 	 padding: 10px;
 	 margin-right: -1px;
 	 transition: padding 0.2s;
